# idea_meta-muse-2048-game

./: .gitignore  README.md  _check_bare.py  _check_dist.py  _check_png.py  _cleanup.py  _fix_bare.py  _gen_png.py  _headless_capture.py  _run_pytest.py  _tmp_check.py  _update_debt.py  _validate_png.py  _validate_task2.py  _verify_isolation.py  _verify_runtime.py  check_png.py  favur-2048.spec  gen_tiles_after_moves.py  pyproject.toml  recapture.py  sow.md  technical_debt.md  validate_png.py  validate_pngs.py  verify_build.py
docs/: phase-3-milestones.md  phase-3-q001-heat-balance.md  phase-4-q001-re-measurement.md  phase-6-gating-readiness.md  twist-exploration.md
scripts/: _gather.py  _tmp_verify.py  check_build.py  gen_first_light.py  make_binary_png.py  recapture_first_light.py  validate-binary-build.ps1  validate_png.py  validate_screenshot.py  validate_visual_proof.py  verify_packaging.py
spike_packaging/: minimal.py  minimal.spec
src/: main.py
tests/: test_achievements.py  test_binary_launch_smoke.py  test_board.py  test_board_build_fix.py  test_board_spike.py  test_board_task1_tdd.py  test_ci_workflow.py  test_core_init_exports.py  test_effects_smoke.py  test_effects_unit.py  test_fallback_toast_fix.py  test_first_light_smoke.py  test_gamestate.py  test_gating_readiness.py  test_gen_screenshot.py  test_history.py  test_hud.py  test_hud_smoke.py  test_integration.py  test_isolation_phase2.py  test_isolation_phase3.py  test_isolation_phase4.py  test_isolation_phase5.py  test_isolation_phase6.py  test_main_first_light.py  test_main_screenshot_gating.py  (+19 more)
(+17 files in other folders)
